--- a/package.json
+++ b/package.json
@@ -18,11 +18,19 @@
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/test-utils": "^3.17.2",
     "@nuxt/ui": "^3.0.2",
+    "@pinia/nuxt": "^0.11.0",
     "@unhead/vue": "^2.0.8",
+    "axios": "^1.8.4",
     "eslint": "^9.25.1",
+    "lucide-vue-next": "^0.503.0",
     "nuxt": "^3.16.2",
+    "pinia": "^3.0.2",
     "typescript": "^5.8.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuex": "^4.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.1"
   }
 }
